Refactoring SSE handshake result so it doesn't vend its own `MarshaledResponse` - that happens inside of `Soklet` now, which is more appropriate.